deploy/prometheus/templates/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: prometheus
  namespace: prometheus 
spec:
  rules:
  - host: prometheus.nuc.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
